@@ -78,6 +78,11 @@ namespace libtorrent
 		, tracker_retry_delay_max = 60 * 60
 	};
 
+	TORRENT_EXTRA_EXPORT int merkle_num_leafs(int);
+	TORRENT_EXTRA_EXPORT int merkle_num_nodes(int);
+	TORRENT_EXTRA_EXPORT int merkle_get_parent(int);
+	TORRENT_EXTRA_EXPORT int merkle_get_sibling(int);
+
 	struct TORRENT_EXPORT announce_entry
 	{
 		announce_entry(std::string const& u);
