@@ -35,7 +35,7 @@ POSSIBILITY OF SUCH DAMAGE.
 #include "libtorrent/storage.hpp"
 #include "libtorrent/escape_string.hpp"
 #include "libtorrent/disk_io_thread.hpp"
-#include "libtorrent/torrent_info.hpp"
+#include "libtorrent/torrent_info.hpp" // for merkle_*()
 
 #include <boost/bind.hpp>
 #include <boost/next_prior.hpp>
@@ -47,11 +47,6 @@ POSSIBILITY OF SUCH DAMAGE.
 
 namespace libtorrent
 {
-	// defined in torrent_info.cpp
-	int merkle_num_leafs(int);
-	int merkle_num_nodes(int);
-	int merkle_get_parent(int);
-	int merkle_get_sibling(int);
 
 	class alert;
 
